# fw-review

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  Makefile  OUTPUT_COMPATIBILITY.md  README.md  RELEASE.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: benchmark.yml  ci.yml  security.yml  supply-chain.yml
config/: review_rules.example.yaml  settings.example.yaml  web.example.yaml
scripts/: benchmark_flatten.py  bootstrap.sh
src/cp_review/: __init__.py  broad_advisor.py  checkpoint_client.py  cli.py  compare.py  config.py  doctor.py  effective_scope.py  exceptions.py  logging_conf.py  models.py  policy_health.py  provenance.py  review_queue.py  run_manifest.py  run_metrics.py  simulation.py  validate_run.py
src/cp_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cp_review/analyzers/: __init__.py  broad_allow.py  disabled_rules.py  duplicate_candidates.py  high_risk_broad_usage.py  no_log_rules.py  relationships.py  shadow_candidates.py  unused_rules.py  weak_documentation.py
src/cp_review/collectors/: __init__.py  access_rulebase.py  hitcount.py  logs.py  objects.py  packages.py
src/cp_review/normalize/: __init__.py  dataset.py  enrich.py  flatten.py
src/cp_review/reports/: __init__.py  compare_html_writer.py  csv_writer.py  html_writer.py  json_writer.py  jsonl_writer.py
src/cp_review/reports/templates/: drift_summary.html.j2  report.html.j2  review_queue.html.j2
src/cp_review/scoring/: __init__.py  priority.py
src/cp_review/web/: __init__.py  app.py  config.py  db.py  service.py
src/cp_review/web/templates/: base.html.j2  campaigns.html.j2  drift.html.j2  (+11 more)
tests/: test_access_rulebase_collector.py  test_analyzers.py  test_checkpoint_client.py  test_cli_smoke.py  test_collection.py  test_compare.py  test_config.py  test_doctor.py  test_flatten.py  test_hitcount.py  test_jsonl_writer.py  test_logs_collection.py  test_provenance.py  test_relationships.py  test_run_manifest.py  test_run_metrics.py  test_validate_run.py  test_web.py
tests/fixtures/: complex_rulebase_page.json  sample_rulebase_page.json
