[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cp-review"
version = "0.1.0"
description = "Read-only Check Point Access Control review CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<0.29",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "PyYAML>=6.0,<7.0",
  "tenacity>=8.2,<10.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "cyclonedx-bom>=4.1,<5.0",
  "mypy>=1.10,<2.0",
  "pip-audit>=2.9,<3.0",
  "pre-commit>=3.7,<4.0",
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.12,<0.13",
  "types-PyYAML>=6.0,<7.0",
]

[project.scripts]
cp-review = "cp_review.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict_optional = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["cp_review"]
